--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -10,6 +10,7 @@
 
 
 
+
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
@@ -18,6 +19,31 @@
         android:text="Exercise_name"
         android:textColor="@color/colorPrimary"
         android:textSize="24sp" />
+    <LinearLayout
+        android:layout_below="@id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txtLeft"
+            android:textColor="@color/colorPrimary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Left"
+            android:textSize="20sp" />
+        <TextView
+            android:id="@+id/txtDone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Done"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
+
+
+    </LinearLayout>
+
 
 
     <ProgressBar
@@ -45,13 +71,31 @@
 
         <TextView
             android:id="@+id/get_ready_text"
-            android:text=""
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:layout_gravity="center_horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/cardview_light_background"/>
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text=""
+            android:textColor="@color/colorPrimary"
+            android:textSize="18sp"
+            android:paddingBottom="10dp"/>
+        <Button
+            android:id="@+id/btnEnd"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:text="Done"
+            android:textSize="18sp"
+            android:textColor="@color/colorPrimary" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text=""
+            android:textColor="@android:color/white"
+            android:textSize="15sp" />
+
 
         <TextView
             android:id="@+id/countdown_text"
@@ -94,7 +138,7 @@
                 android:id="@+id/start_button"
                 android:layout_width="180dp"
                 android:layout_height="50dp"
-                android:background="@drawable/btn_start_sa" />
+                android:text="Begin" />
 
             <Button
                 android:id="@+id/btnNext"
